# tucoopy

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.pt.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: requirements-docs.txt  requirements.txt
docs/en/: animation_spec.md  api.md  examples.md  index.md  references.md  structure.md
docs/en/guide/: quickstart.md
docs/en/guides/: analysis_contract.md  animation_spec.md  dev_windows_onedrive.md  diagnostics.md  examples.md  large_games.md  lp_backends.md  performance.md  quickstart.md  vizualization.md
docs/en/howto/: debug_diagnostics.md  n_gt_4.md
docs/en/project/: contributions.md  deprecation.md  js_vs_python.md  project_critique.md  public_api.md  references.md  roadmap.md
docs/en/reference/: index.md
docs/en/stylesheets/: extra.css
docs/en/theory/: allocations.md  index.md  notation.md  set_solutions.md  simple_games.md  solution_concepts.md  stability.md  tu_games.md
docs/pt/: index.md
docs/pt/guides/: animation_spec.md  dev_windows_onedrive.md  diagnostics.md  examples.md  large_games.md  lp_backends.md  performance.md  quickstart.md
docs/pt/javascripts/: cg-tooltips.js  (+1 more)
examples/: 01_shapley_and_core.py  02_classic_games.py  03_least_core_and_nucleolus.py  04_kernel_and_prekernel.py  05_animation_spec_to_file.py  06_generate_specs_for_js_demo.py  07_weighted_values.py  08_power_indices_weighted_voting.py  09_modiclus.py  10_kernel_set_and_bargaining_set.py  11_static_viz_from_spec.py  12_static_viz_direct.py  13_mpl2_segment.py  14_mpl3_ternary.py  15_transforms_mobius_and_harsanyi.py  16_io_roundtrip_animation_spec.py  17_diagnostics_core_checks.py  18_blocking_regions_ternary.py  19_power_indices_more.py  20_geometry_sets_with_lp_backend.py  README.md  _bootstrap.py
guides/analysis_contract/: index.html
guides/animation_spec/: index.html
guides/choose_solution/: index.html
guides/diagnostics/: index.html
guides/examples/: index.html
guides/large_games/: index.html
guides/lp_backends/: index.html
guides/performance/: index.html
guides/quickstart/: index.html
guides/vizualization/: index.html
project/contributions/: index.html
project/deprecation/: index.html
project/js_vs_python/: index.html
project/public_api/: index.html
project/references/: index.html
project/roadmap/: index.html
pt/: 404.html  index.html  sitemap.xml
pt/reference/: index.html
pt/search/: search_index.json
pt/theory/: index.html
reference/: index.html
search/: search_index.json
site/pt/: 404.html  index.html  objects.inv  sitemap.xml
src/coopgt/: __init__.py
src/tucoopy/: __init__.py  requirements_dev.txt
tests/: conftest.py  test_basic.py  test_blocking_regions.py  test_build_analysis.py  test_build_animation_spec.py  test_core_cover.py  test_diagnostics_core.py  test_diagnostics_helpers.py  test_diagnostics_sets.py  test_edge_cases.py  test_fast_optional.py  test_games.py  test_geometry_new_modules.py  test_io_schema.py  test_kernel_set.py  test_linprog_adapter.py  test_lp_explanations_optional.py  test_lp_optional.py  test_modiclus_optional.py  test_polyhedron.py  test_solutions_new.py  test_solve_dispatch.py  test_spec_highlights.py  test_theory_canonic.py  test_weber_set_poly.py  test_weighted_values.py
theory/: index.html
theory/allocations/: index.html
theory/game_classes/: index.html
theory/notation/: index.html
theory/power/: index.html
theory/set_solutions/: index.html
theory/simple_games/: index.html
theory/solution_concepts/: index.html
theory/stability/: index.html
theory/transforms/: index.html
theory/tu_games/: index.html
(+627 files in other folders)
