[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tucoopy"
version = "0.1.0"
description = "Cooperative game theory (TU) algorithms + animation spec generator"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Brenno Gustavo Barbosa" }]
dependencies = [
]

keywords = ["cooperative-game-theory", "game-theory", "shapley", "banzhaf", "nucleolus"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/brennobarbosa/tucoopy"
Repository = "https://github.com/brennobarbosa/tucoopy"
Issues = "https://github.com/brennobarbosa/tucoopy/issues"

[project.optional-dependencies]
lp = ["scipy>=1.10"]
lp_alt = ["pulp>=2.8"]
fast = ["numpy>=1.26"]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
  "mkdocstrings[python]>=0.25",
  "griffe>=0.49",
  "mkdocs-git-revision-date-localized-plugin>=1.5",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-awesome-pages-plugin>=2.10",
  "ruff>=0.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tucoopy*"]

[tool.setuptools.package-data]
"tucoopy.io" = ["schemas/*.json"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [
  "pytest-cache-files-*",
]
